# gradestats

./: .dockerignore  Dockerfile  deploy.sh  docker-entrypoint.sh  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml  publish.yml
authentication/: backend.py
clients/: client.py  course_pages.py  nsd.py  tia.py
grades/: admin.py  models.py  utils.py  views.py
grades/migrations/: 0001_initial.py  0002_grade_digital_exam.py  0003_auto_20200217_2316.py  0004_auto_20200512_1057.py  0004_faculty.py  0005_auto_20200501_1334.py  0005_auto_20200512_2008.py  0006_auto_20200512_2029.py  0006_department.py  0007_report.py  0008_coursetag.py  0009_auto_20200514_1432.py  0010_remove_tag_courses.py  0011_tag_courses.py  0012_coursetag_created_by.py  0013_merge_20200515_1353.py  0014_auto_20200515_1440.py  0015_auto_20200515_1719.py  0016_department_faculty.py  0017_auto_20200515_1744.py  0018_auto_20200515_1746.py  0019_auto_20200516_0642.py  0020_auto_20200516_0711.py  0021_auto_20200516_0953.py  0022_course_department.py  0023_auto_20200517_1248.py  0024_auto_20200517_1248.py  0025_auto_20200517_1351.py  0026_remove_grade_semester_code.py  0027_favourite.py  0028_course_pass_rate.py
grades/static/js/: gradestats.js
grades_api/: serializers.py  views.py
grades_api_v2/: filters.py  serializers.py  urls.py  views.py
gradestats/: asgi.py  urls.py
gradestats/settings/: base.py  dev.py  prod.py
scripts/: course_is_digital.py  grades_sync.py
services/: course_service.py  grade_service.py
templates/: about.html  base.html
