[project]
name = "gradestats"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "daphne>=4.1.2",
    "django>=5.1.6",
    "django-cors-headers>=4.7.0",
    "django-filter>=25.1",
    "django-watson>=1.6.3",
    "djangorestframework>=3.15.2",
    "drf-extensions>=0.7.1",
    "html5lib>=1.1",
    "mozilla-django-oidc>=4.0.1",
    "openapi>=2.0.0",
    "psycopg2-binary>=2.9.10",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "ruff>=0.9.8",
    "sentry-sdk>=2.22.0",
    "uritemplate>=4.1.1",
]
